@startuml

package persistence <<Rectangle>>{
	class Database
	class GcmController
	class MessageController
	class Persistence
	class SessionController
}

package xep <<Rectangle>> {
	package chatMarkers <<Rectangle>> {
		class ChatMarkers
	}

	package httpFileUpload <<Rectangle>> {
		class DownloadManager
		class HttpFileUploader
		class HttpFileUploadManager
		class XmlHttpUploadContentHandler
		class ImageProcessing
	}

	package xmppPingController <<Rectangle>> {
		class XmppPingController
	}
}

package contacts <<Rectangle>> {
	class SessionController
	class RosterItem
	class PresenceHandler
	class RosterController
}

package networkConnection <<Rectangle>> {
	class ConnectionHandler
	class ReConnectionHandler
	class IpHeartBeatWatcher
}

package room <<Rectangle>> {
	class MucManager
	class MucCollection
}

package base <<Rectangle>> {
	class Shmoose
	class FileModel
	class FileInfo
	class Settings
	class MessageHandler
	class DiscoInfoHandler
	class XmlWriter
	class XmlProcessor
	class System
}

class XmlWriter << globalAccess >>
class XmlProcessor << globalAccess >>
class System << globalAccess >>

ChatMarkers --> RosterController
ChatMarkers --> Persistence
ConnectionHandler --> ReConnectionHandler
ConnectionHandler --> IpHeartBeatWatcher
ConnectionHandler --> XmppPingController
DiscoInfoHandler --> HttpFileUploadManager
FileModel --> FileInfo
GcmController --> Database
HttpFileUploadManager --> XmlHttpUploadContentHandler
HttpFileUploadManager --> HttpFileUploader
HttpFileUploadManager --> ImageProcessing
MessageController --> Database
MessageHandler --> Persistence
MessageHandler --> DownloadManager
MessageHandler --> Settings
MessageHandler --> ChatMarkers
MucManager --> MucCollection
Persistence --> GcmController
Persistence --> MessageController
PresenceHandler --> RosterController
RosterController --> PresenceHandler
RosterController --> RosterItem
SessionController --> Database
Shmoose --> Persistence
Shmoose --> ConnectionHandler
Shmoose --> MessageHandler
Shmoose --> Settings
Shmoose --> RosterController
Shmoose --> HttpFileUploadManager
Shmoose --> DiscoInfoHandler
Shmoose --> MucManager
Shmoose --> FileModel
@enduml

